--- a/index.htm
+++ b/index.htm
@@ -275,7 +275,7 @@
 <!--contact section design-->
 
 <section class="contact" id="contact">
-    <h2 class="heading">Contactez <span>Moi</span></h2>
+    <h2 class="heading"><span><div class="contact-text"></div></span></h2>
 
     <form action="#">
         <div class="input-box">
@@ -319,6 +319,10 @@
 <!--typed js-->
 
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+
+<!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
+
 
 
         <script src="js/script.js"></script>
