--- a/index.htm
+++ b/index.htm
@@ -88,44 +88,7 @@
             <div class="competences-container">
                 <div class="competences-box">
                     <i class='bx bx-code-alt'></i>
-                    <h3><span>Développement Web</span></h3>
-                    <br>
-                        <p>
-                            Ma transition d'un rôle de Supply Chain Manager vers
-                            celui de Développeur Full Stack a enrichi ma boîte à
-                            outils professionnelle.</p><br> <p>Je jongle avec les langages
-                                de programmation essentiels tels que <span>HTML</span> ,<span>CSS</span>  et <span>JavaScript</span>
-                                , tout en utilisant les frameworks
-                                modernes tels que <span>React</span>  et <span>NextJs</span>  pour donner vie à
-                                des interfaces utilisateur interactives et
-                                performantes.</p> <br> <p>Mon expertise s'étend également aux
-                                    bases de données, avec des connaissances de <span>MySQL</span> 
-                                    pour la gestion efficace des données.</p> <br> <p>L'art de créer
-                                        des expériences utilisateur exceptionnelles <span>(UX)</span>
-                                        guide ma conception d'interfaces attrayantes et
-                                        intuitives.</p> <br> <p>Mon approche analytique et mon sens aigu
-                                            du détail me permettent de résoudre efficacement les
-                                            problèmes et d'optimiser les performances tant sur
-                                            le <span>Front-End</span> que sur le <span>Back-End</span> .</p>  <br><p>Je transmets mes
-                                                compétences de collaboration en participant
-                                                activement à des projets d'équipe. J'apporte ma
-                                                contribution à la planification, au codage et à la
-                                                résolution de problèmes en équipe, créant ainsi un
-                                                environnement favorable à l'innovation et à
-                                                l'apprentissage mutuel.</p> <br> <p>Mon engagement envers
-                                                    l'amélioration continue me guide dans la création
-                                                    d'applications performantes et centrées sur
-                                                    l'utilisateur, tout en tirant parti des forces de
-                                                    chacun pour atteindre des objectifs communs.</p> <br> <p>Je
-                                                        combine cette diversité de compétences pour façonner
-                                                        des applications innovantes qui laissent une
-                                                        empreinte numérique marquante.</p> <br>
-                                                        <p>De plus, ma soif de connaissance me pousse à rester constamment à jour avec les dernières tendances technologiques.
-                                                            Je consacre du temps à la veille et à l'auto-apprentissage sur des langages tels que <span>Java</span> et <span>Python</span>. Cela me permet
-                                                            d'élargir encore davantage ma palette de compétences et de rester à la pointe de l'industrie.</p>
-                                                        </p>
-                        </p>
-                        
+                    <img src="images/competences.png" alt="">
                     </div>
                 </div>
             </div>
