--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
         <!--about section design -->
         <section class="about" id="about">
             <div class="about-img">
-                <img src="images/img -fococlipping-standard.png" alt="" />
+                <img src="images/About_2.png" alt="" />
             </div>
 
             <div class="about-content">
@@ -88,7 +88,7 @@
             <div class="competences-container">
                 <div class="competences-box">
                     <i class='bx bx-code-alt'></i>
-                    <img src="images/competences.png" alt="">
+                    <img src="images/Competences_2.png" alt="">
                     </div>
                 </div>
             </div>
