--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/Social_media.png" alt="">
+                <img src="images/Social_media.png" alt=""><br>
                 <video class="expandable" controls>
                     <source src="images/SM video.mp4" type="video/mp4">
                 </video>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/Dataviz.gif" alt="">
+                <img src="images/Dataviz.gif" alt=""><br>
                 <video class="expandable" controls>
                     <source src="images/dataviz.mp4" type="video/mp4">
                 </video>
