Add logo for tittle navigator

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Personnal Portfolio</title>
+        <title>Personnal farah Portfolio</title>
+        <link rel="icon" href="images/Trendy Modern Aesthetic Line Art Face Initial Logo (1).png" type="image/x-icon">
 
         <!-- box icons -->
         <link
@@ -41,7 +42,7 @@
                 <h2>Hello, Moi C'est</h2>
                 <h1>François Diouf</h1>
                 <br />
-                <h3> et je suis <span><div class="multiple-text"></div></span></h3>
+                <h3> et je suis <span> <div class="multiple-text"></div> </span></h3>
                 <br />
                 <p>
                     Code, Création et Innovation : Bienvenue dans mon Monde de
@@ -55,6 +56,8 @@
                 <a href="docs/CV_Mr Diouf.pdf" class="btn" download>Télécharger mon CV</a>
             </div>
 
+            
+            
             <div class="home-img">
                 <img src="images/PP_Accueil.png" alt="" />
             </div>
