--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
 
             <div class="portfolio-box">
                 <img src="images/Social_media.png" alt=""><br>
-                <video class="expandable" controls>
+                <video class="expandable" controls muted>
                     <source src="images/SM video.mp4" type="video/mp4">
                 </video>
                 <div class="portfolio-layer">
@@ -140,7 +140,7 @@
         <div class="portfolio-row">
             <div class="portfolio-box">
                 <img src="images/icone W4A.png" alt=""><br>
-                <video class="expandable" controls>
+                <video class="expandable" controls muted>
                     <source src="images/W4All.mp4" type="video/mp4">
                 </video>
                 <div class="portfolio-layer">
@@ -156,7 +156,7 @@
 
             <div class="portfolio-box">
                 <img src="images/Dataviz.gif" alt=""><br>
-                <video class="expandable" controls>
+                <video class="expandable" controls muted>
                     <source src="images/dataviz.mp4" type="video/mp4">
                 </video>
                 <div class="portfolio-layer">
@@ -243,12 +243,12 @@
 
     <form action="#">
         <div class="input-box">
-        <input type="text" placeholder="Nom complet">
-        <input type="text" placeholder="Adresse email">
+        <input type="text" name="Nom" placeholder="Nom complet">
+        <input type="text" name="email" placeholder="Adresse email">
     </div>
 
 
-    <textarea name="" id="" cols="30" rows="10" placeholder="Votre message"></textarea>
+    <textarea name="message" id="" cols="30" rows="10" placeholder="Votre message"></textarea>
     <input type="submit" value="Envoyer" class="btn">
 
 </form>
