settings for views with google analytics

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Personnal farah Portfolio</title>
+        <title> François Diouf - Portfolio</title>
         <link rel="icon" href="images/Trendy Modern Aesthetic Line Art Face Initial Logo (1).png" type="image/x-icon">
 
         <!-- box icons -->
@@ -15,6 +15,16 @@
         <!-- CSS only -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSG6Z4D9NW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HSG6Z4D9NW');
+</script>
     <body>
         <!-- Header design -->
 
@@ -252,6 +262,10 @@
     <input type="submit" value="Envoyer" class="btn">
 
 </form>
+
+<div id="success-message" style="display: none;">Votre message a bien été transmis à François Diouf</div>
+
+
 </section>
 
 <!--footer design-->
