--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,9 @@
 
         <!-- CSS only -->
         <link rel="stylesheet" href="css/style.css" />
+
+        <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
     </head>
 
     <!-- Google tag (gtag.js) -->
@@ -297,5 +300,15 @@
 <!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
 
         <script src="js/script.js"></script>
+
+        <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<!-- <script type="text/javascript">
+(function(){
+    emailjs.init("wQxZrnyAbcnbqC5XG");
+})();
+</script> -->
+
     </body>
 </html>
