--- a/index.htm
+++ b/index.htm
@@ -261,15 +261,14 @@
 
 <section class="contact" id="contact">
     <h2 class="heading"><span><div class="contact-text"></div></span></h2>
-
     <form action="#">
         <div class="input-box">
-        <input type="text" name="Nom" placeholder="Nom complet">
-        <input type="text" name="email" placeholder="Adresse email">
+        <input type="text" name="Nom" id = "Nom" placeholder="Nom complet">
+        <input type="text" name="email" id="email" placeholder="Adresse email">
     </div>
 
 
-    <textarea name="message" id="" cols="30" rows="10" placeholder="Votre message"></textarea>
+    <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
     <input type="submit" value="Envoyer" class="btn">
 
 </form>
