--- a/index.htm
+++ b/index.htm
@@ -28,11 +28,8 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-HSG6Z4D9NW');
-</script>
-
-       
-
-    </head>
+        </script>
+</head>
 
     
 
@@ -263,7 +260,7 @@
     <h2 class="heading"><span><div class="contact-text"></div></span></h2>
     <form action="#">
         <div class="input-box">
-        <input type="text" name="Nom" id = "Nom" placeholder="Nom complet">
+        <input type="text" name="Nom" id= "Nom" placeholder="Nom complet">
         <input type="text" name="email" id="email" placeholder="Adresse email">
     </div>
 
@@ -308,9 +305,9 @@
 
         <script src="js/script.js"></script>
 
-        <script type="text/javascript"
+        <!-- <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-</script>
+</script> -->
 <!-- <script type="text/javascript">
 (function(){
     emailjs.init("wQxZrnyAbcnbqC5XG");
