--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,7 @@
                     <a href="https://www.linkedin.com/in/fran%C3%A7ois-diouf/"><i class="bx bxl-linkedin"></i></a>
                     <a href="https://github.com/farah-9"><i class="bx bxl-github"></i></a>
                 </div>
-                <a href="docs/CV_Mr Diouf.pdf" class="btn" download>Télécharger mon CV</a>
+                <a href="docs/CV Concepteur web.pdf" class="btn" download>Télécharger mon CV</a>
             </div>
 
             
