--- a/index.htm
+++ b/index.htm
@@ -88,16 +88,13 @@
             </div>
 
             <div class="about-content">
-                <h2 class="heading">De la Supply Chain au Code -> <span> mon voyage passionnant vers le monde du développement web</span> !</h2><br>
+                <h2 class="heading">A la découverte de FRANÇOIS DIOUF -> <span> Artisan Numérique</span> !</h2><br>
                 
-            <p>Après <span>7 ans</span> à étudier et travailler dans le milieu de la logistique, j’ai décidé de me reconvertir dans le domaine du numérique qui m’intéresse depuis toujours.
+            <p>Passionné par <span>l'univers numérique</span> depuis mon plus jeune âge, je me suis engagé à créer des expériences en ligne remarquables et fonctionnelles. Avec une solide expérience dans <span> l'édition de solutions numériques</span>, je suis constamment à la recherche de nouvelles façons d'innover et de repousser les limites de la technologie.
             </p>
-            <p>Ces 3 dernières années ont été riches en expérience. : Un installation à Nantes, une intégration dans le marché du travail français et une famille qui s’agrandit. 
-                Autant de nouveaux challenges qui n’ont fait qu’accroître mon adaptabilité et m’ont poussé à prendre du recul sur différents aspects de ma vie.</p>
-            <p>C’est donc avec conviction que je me suis engagé dans une formation de <span>concepteur développeur d’applications</span> au sein d’ <span>Ada Tech School</span> en Janvier 2023.
-                Mon expérience dans la logistique m’a permis de développer des compétences  telles que l’organisation, l’adaptabilité et une aisance relationnelle qui me permet de travailler facilement en équipe mais aussi de créer de vrais liens avec les clients et d’être au plus près de leurs besoins.</p>   
-                <p>Chaque ligne de code que j'écris est une nouvelle étape vers un futur où je donne vie à des idées innovantes. Rejoignez-moi dans ce voyage palpitant au carrefour de la technologie et de la créativité.</p>    
-                <p>Actuellement à la recherche active d’une <span>alternance pour octobre 2023</span>, j’ai hâte de pouvoir intégrer une entreprise et de continuer à progresser dans ce domaine qui m’épanouit déjà.</p>
+            <p>Mon approche centrée sur <span> l'utilisateur</span> et mon engagement envers <span> l'excellence</span> me permettent de concevoir et de développer des produits qui non seulement répondent aux besoins des utilisateurs, mais les enchantent également.
+                </p>
+            <p>En combinant ma passion pour la technologie avec mes compétences en conception et en développement, je m'efforce de créer des solutions numériques qui laissent une impression durable. Prêt à relever de nouveaux défis et à collaborer avec des esprits créatifs, je suis déterminé à transformer des idées en réalité numérique.</p>
                 
             </div>
         </section>
