--- a/index.htm
+++ b/index.htm
@@ -106,7 +106,7 @@
             <div class="competences-container">
                 <div class="competences-box">
                     <i class='bx bx-code-alt'></i>
-                    <img src="images/Competences_2.png" alt="">
+                    <img src="images/Skills.png" alt="">
                     </div>
                 </div>
             </div>
