--- a/index.htm
+++ b/index.htm
@@ -72,9 +72,10 @@
                     <a href="https://github.com/farah-9"><i class="bx bxl-github"></i></a>
                 </div>
                 <a href="docs/CV Concepteur web.pdf" class="btn" download>Télécharger mon CV "Développeur"</a>
-            </div> </div>
-                <a href="docs/francois Diouf CV.pdf" class="btn" download>Télécharger mon CV "Supply Chain Manager"</a>
+                </div>
+                <a href="docs/francois Diouf CV.pdf" class="btn" download>Télécharger mon CV "Technicien Manager"</a>
             </div>
+            </div> 
             
             
             <div class="home-img">
