--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,7 @@
                 </div>
                 <a href="docs/CV Concepteur web.pdf" class="btn" download>Télécharger mon CV "Développeur"</a>
                 </div>
-                <a href="docs/francois Diouf CV.pdf" class="btn" download>Télécharger mon CV "Technicien Manager"</a>
+                <a href="docs/francois Diouf CV.pdf" class="btn" download>Télécharger mon CV "Technicien Logistique"</a>
             </div>
             </div> 
             
