--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@
             </div>
 
             <div class="about-content">
-                <h2 class="heading">A la découverte de:
+                <h2 class="heading">A la découverte de :<br>
                     <br> FRANÇOIS DIOUF </h2><br>
                 
             <p>Professionnel en <span>gestion de la chaîne d’approvisionnement</span>, j’ai pu évoluer dans divers milieux et acquérir une riche expérience du terrain dans la logistique. Egalement attiré par <span> l’informatique</span>, c’est avec plaisir que je me suis un peu plus ouvert à ce monde par le biais d’une formation de <span> concepteur développeur d'applications</span>.
