--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,7 @@
                 <h3> et je suis <span> <div class="multiple-text"></div> </span></h3>
                 <br />
                 <p>
-                    Code, Création et Innovation : Bienvenue dans mon Monde de
-                    Développement !
+                    Gestion, Optimisation et Innovation en Supply Chain : Bienvenue dans ma Vision de Gestion Logistique Innovante !
                 </p>
 
                 <div class="social-media">
