--- a/index.htm
+++ b/index.htm
@@ -111,6 +111,14 @@
                     </div>
                 </div>
             </div>
+
+             <div class="competences-container">
+                <div class="competences-box">
+                    <i class='bx bx-code-alt'></i>
+                    <img src="images/Skills.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
 
         
