--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
 
              <div class="competences-container">
                 <div class="competences-box">
-                    <i class='bx bx-code-alt'></i>
+                    <i class='https://www.flaticon.com/free-icon/supply-chain_17400678'></i>
                     <img src="images/Skills.png" alt="">
                     </div>
                 </div>
