--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
 
              <div class="competences-container">
                 <div class="competences-box">
-                    <i class='https://www.flaticon.com/free-icon/supply-chain_17400678'></i>
+                    <i class='https://cdn-icons-png.flaticon.com/512/5351/5351614.png'></i>
                     <img src="images/Skills.png" alt="">
                     </div>
                 </div>
