--- a/index.htm
+++ b/index.htm
@@ -115,7 +115,7 @@
              <div class="competences-container">
                 <div class="competences-box">
                     <i class='bx bx-package'></i>
-                    <img src="https://github.com/farah-9/Mon-portfolio/blob/main/images/comp%C3%A9tences%20Supply%20chain.png">
+                    <img src="images/compétences Supply chain.png">
                     </div>
                 </div>
             </div>
