--- a/index.htm
+++ b/index.htm
@@ -115,7 +115,7 @@
              <div class="competences-container">
                 <div class="competences-box">
                     <i class='bx bx-package'></i>
-                    <img src="images/compétences Supply chain.png">
+                    <img src="images/compétences supply chain.png">
                     </div>
                 </div>
             </div>
